crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__prune-nonescaping-useMemo-mult-returns.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/prune-nonescaping-useMemo-mult-returns.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] VoidUseMemo: useMemo() result is unused", labels: [LabeledSpan { label: Some("useMemo() result is unused"), span: Span { start: 150, end: 157 }, primary: false }], help: Some("This useMemo() value is unused. useMemo() is for computing and caching values, not for arbitrary side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { identity } from "shared-runtime";
function useFoo(cond) {
	let t0;
	if (cond) {
		t0 = identity(10);
	} else {
		t0 = identity(5);
	}
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [true]
};
