crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__prune-nonescaping-useMemo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/prune-nonescaping-useMemo.ts
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] VoidUseMemo: useMemo() result is unused", labels: [LabeledSpan { label: Some("useMemo() result is unused"), span: Span { start: 283, end: 290 }, primary: false }], help: Some("This useMemo() value is unused. useMemo() is for computing and caching values, not for arbitrary side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @validatePreserveExistingMemoizationGuarantees
import { useMemo } from "react";
import { identity } from "shared-runtime";
/**
* This is technically a false positive, although it makes sense
* to bailout as source code might be doing something sketchy.
*/
function useFoo(x) {}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [2]
};
