crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__repro-maybe-invalid-useCallback-read-maybeRef.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/repro-maybe-invalid-useCallback-read-maybeRef.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees
import { useCallback } from "react";
function useHook(maybeRef) {
	const $ = _c(2);
	let t0;
	if ($[0] !== maybeRef) {
		t0 = () => [maybeRef.current];
		$[0] = maybeRef;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
