crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__repro-maybe-invalid-useMemo-read-maybeRef.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/repro-maybe-invalid-useMemo-read-maybeRef.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
function useHook(maybeRef, shouldRead) {
	const $ = _c(2);
	let t0;
	if ($[0] !== maybeRef) {
		t0 = () => [maybeRef.current];
		$[0] = maybeRef;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
