crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__todo-ensure-constant-prop-decls-get-removed.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/todo-ensure-constant-prop-decls-get-removed.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
// Todo: we currently only generate a `constVal` declaration when
// validatePreserveExistingMemoizationGuarantees is enabled, as the
// StartMemoize instruction uses `constVal`.
// Fix is to rewrite StartMemoize instructions to remove constant
// propagated values
function useFoo() {
	const $ = _c(1);
	const constVal = 0;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [0];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{}]
};
