crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useCallback-alias-property-load-dep.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useCallback-alias-property-load-dep.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees
import { useCallback } from "react";
import { sum } from "shared-runtime";
function Component(t0) {
	const $ = _c(3);
	const { propA, propB } = t0;
	const x = propB.x.y;
	let t1;
	if ($[0] !== propA.x || $[1] !== x) {
		t1 = () => sum(propA.x, x);
		$[0] = propA.x;
		$[1] = x;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		propA: { x: 2 },
		propB: { x: { y: 3 } }
	}]
};
