crates/oxc_react_compiler/tests/snapshots/preserve-memo-validation__useCallback-captures-reassigned-context.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/preserve-memo-validation/useCallback-captures-reassigned-context.ts
---
import { c as _c } from "react/compiler-runtime";
// @validatePreserveExistingMemoizationGuarantees
import { useCallback } from "react";
import { makeArray } from "shared-runtime";
// This case is fine, as all reassignments happen before the useCallback
function Foo(props) {
	const $ = _c(4);
	let x;
	if ($[0] !== props) {
		x = [];
		x.push(props);
		x = makeArray();
		$[0] = props;
		$[1] = x;
	} else {
		x = $[1];
	}
	let t0;
	if ($[2] !== x) {
		t0 = () => [x];
		$[2] = x;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	x;
	const cb = t0;
	return cb;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
